--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,11 @@
         },
         "description": "Copy current tab URL"
       }
+    },
+    "icons": {
+      "16": "icons/16x16.png",
+      "32": "icons/32x32.png",
+      "48": "icons/48x48.png",
+      "128": "icons/128x128.png"
     }
   }
